kubernetes/clusters/homelab/apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-prod-cp-1
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.4.4@sha256:dc66c010c5d9a0ea131fa3c1716fd0f9493b64c1d3d9f938ebed6b7fab580e5b
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - NET_RAW
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: radarr-pvc
              mountPath: /config
            - name: media-nfs
              mountPath: /mnt/media
              readOnly: false
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: radarr-pvc
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: media-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: tmp-volume
          emptyDir: {}
